# devmagd-bot

./: Debug.py  Downloads.py  Instagram.py  README.md  UploadFiles.py  client_secrets.json  conf.yaml  credentials_module.json  delete.py  download_playlist.py  download_url.py  drive_dl.py  encrypt.py  filemaster.session  login.py  main.py  progrs.py  pyproject.toml  requirements.txt  requiremtents.txt  rey_uploadpackBot.session  rey_uploadpackBot.session-journal  server.py  session-devmaster_one  session-olizykes  tests.py  tools.py  unrar-nonfree  uploadDrive.py  variables_globales.py  youtubedl.py
ModulesDownloads/: file_tipeClass.py  mega_bar.py  uptodown.py  wallhavendl.py  youtubedl.py  zippyshare.py
static/: estilos.css  style_user.css
templates/: index.html  usr.html
